--- a/ref/msal-core/enums/_telemetry_apievent_.api_event_identifier.html
+++ b/ref/msal-core/enums/_telemetry_apievent_.api_event_identifier.html
@@ -81,6 +81,7 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_event_identifier.html#acquiretokensilent" class="tsd-kind-icon">Acquire<wbr>Token<wbr>Silent</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_event_identifier.html#loginpopup" class="tsd-kind-icon">Login<wbr>Popup</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_event_identifier.html#loginredirect" class="tsd-kind-icon">Login<wbr>Redirect</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_event_identifier.html#logout" class="tsd-kind-icon">Logout</a></li>
 							</ul>
 						</section>
 					</div>
@@ -94,7 +95,7 @@
 					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;AcquireTokenPopup&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L28">src/telemetry/ApiEvent.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L29">src/telemetry/ApiEvent.ts:29</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -104,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;AcquireTokenRedirect&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L26">src/telemetry/ApiEvent.ts:26</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L27">src/telemetry/ApiEvent.ts:27</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">Acquire<wbr>Token<wbr>Silent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;AcquireTokenSilent&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L27">src/telemetry/ApiEvent.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L28">src/telemetry/ApiEvent.ts:28</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">Login<wbr>Popup<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;LoginPopup&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L30">src/telemetry/ApiEvent.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L31">src/telemetry/ApiEvent.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +135,17 @@
 					<div class="tsd-signature tsd-kind-icon">Login<wbr>Redirect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;LoginRedirect&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L29">src/telemetry/ApiEvent.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L30">src/telemetry/ApiEvent.ts:30</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="logout" class="tsd-anchor"></a>
+					<h3>Logout</h3>
+					<div class="tsd-signature tsd-kind-icon">Logout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;Logout&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L32">src/telemetry/ApiEvent.ts:32</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -176,6 +187,9 @@
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_telemetry_apievent_.api_event_identifier.html#loginredirect" class="tsd-kind-icon">Login<wbr>Redirect</a>
 							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_telemetry_apievent_.api_event_identifier.html#logout" class="tsd-kind-icon">Logout</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -185,6 +199,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="../modules/_telemetry_apievent_.html#event_keys" class="tsd-kind-icon">EVENT_<wbr>KEYS</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_telemetry_apievent_.html#mapeventidentifertocode" class="tsd-kind-icon">map<wbr>Event<wbr>Identifer<wbr>ToCode</a>
 					</li>
 				</ul>
 			</nav>
