--- a/ref/msal-core/enums/_utils_constants_.errorcachekeys.html
+++ b/ref/msal-core/enums/_utils_constants_.errorcachekeys.html
@@ -92,7 +92,7 @@
 					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L97">src/utils/Constants.ts:97</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L99">src/utils/Constants.ts:99</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -102,7 +102,7 @@
 					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESC<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error.description&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L98">src/utils/Constants.ts:98</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L100">src/utils/Constants.ts:100</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -112,7 +112,7 @@
 					<div class="tsd-signature tsd-kind-icon">LOGIN_<wbr>ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;login.error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L96">src/utils/Constants.ts:96</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L98">src/utils/Constants.ts:98</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -163,6 +163,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="../modules/_utils_constants_.html#aadtrustedhostlist" class="tsd-kind-icon">AADTrusted<wbr>Host<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
+						<a href="../modules/_utils_constants_.html#frameprefix" class="tsd-kind-icon">Frame<wbr>Prefix</a>
 					</li>
 				</ul>
 			</nav>
