--- a/ref/msal-core/enums/_utils_constants_.persistentcachekeys.html
+++ b/ref/msal-core/enums/_utils_constants_.persistentcachekeys.html
@@ -91,7 +91,7 @@
 					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;client.info&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L92">src/utils/Constants.ts:92</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L94">src/utils/Constants.ts:94</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -101,7 +101,7 @@
 					<div class="tsd-signature tsd-kind-icon">IDTOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;idtoken&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L91">src/utils/Constants.ts:91</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L93">src/utils/Constants.ts:93</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,6 +149,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="../modules/_utils_constants_.html#aadtrustedhostlist" class="tsd-kind-icon">AADTrusted<wbr>Host<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
+						<a href="../modules/_utils_constants_.html#frameprefix" class="tsd-kind-icon">Frame<wbr>Prefix</a>
 					</li>
 				</ul>
 			</nav>
