--- a/ref/msal-core/enums/_utils_constants_.serverhashparamkeys.html
+++ b/ref/msal-core/enums/_utils_constants_.serverhashparamkeys.html
@@ -91,6 +91,7 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_utils_constants_.serverhashparamkeys.html#id_token" class="tsd-kind-icon">ID_<wbr>TOKEN</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_utils_constants_.serverhashparamkeys.html#scope" class="tsd-kind-icon">SCOPE</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_utils_constants_.serverhashparamkeys.html#session_state" class="tsd-kind-icon">SESSION_<wbr>STATE</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_utils_constants_.serverhashparamkeys.html#state" class="tsd-kind-icon">STATE</a></li>
 							</ul>
 						</section>
 					</div>
@@ -104,7 +105,7 @@
 					<div class="tsd-signature tsd-kind-icon">ACCESS_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;access_token&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L64">src/utils/Constants.ts:64</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L66">src/utils/Constants.ts:66</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +115,7 @@
 					<div class="tsd-signature tsd-kind-icon">CLIENT_<wbr>INFO<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;client_info&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L68">src/utils/Constants.ts:68</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L70">src/utils/Constants.ts:70</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +125,7 @@
 					<div class="tsd-signature tsd-kind-icon">ERROR<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L62">src/utils/Constants.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L64">src/utils/Constants.ts:64</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +135,7 @@
 					<div class="tsd-signature tsd-kind-icon">ERROR_<wbr>DESCRIPTION<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;error_description&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L63">src/utils/Constants.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L65">src/utils/Constants.ts:65</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +145,7 @@
 					<div class="tsd-signature tsd-kind-icon">EXPIRES_<wbr>IN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;expires_in&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L66">src/utils/Constants.ts:66</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L68">src/utils/Constants.ts:68</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +155,7 @@
 					<div class="tsd-signature tsd-kind-icon">ID_<wbr>TOKEN<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;id_token&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L65">src/utils/Constants.ts:65</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L67">src/utils/Constants.ts:67</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +165,7 @@
 					<div class="tsd-signature tsd-kind-icon">SCOPE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;scope&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L61">src/utils/Constants.ts:61</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L62">src/utils/Constants.ts:62</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +175,17 @@
 					<div class="tsd-signature tsd-kind-icon">SESSION_<wbr>STATE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;session_state&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L67">src/utils/Constants.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L69">src/utils/Constants.ts:69</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="state" class="tsd-anchor"></a>
+					<h3>STATE</h3>
+					<div class="tsd-signature tsd-kind-icon">STATE<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = &quot;state&quot;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L63">src/utils/Constants.ts:63</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -228,6 +239,9 @@
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_utils_constants_.serverhashparamkeys.html#session_state" class="tsd-kind-icon">SESSION_<wbr>STATE</a>
 							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_utils_constants_.serverhashparamkeys.html#state" class="tsd-kind-icon">STATE</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -240,6 +254,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="../modules/_utils_constants_.html#aadtrustedhostlist" class="tsd-kind-icon">AADTrusted<wbr>Host<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
+						<a href="../modules/_utils_constants_.html#frameprefix" class="tsd-kind-icon">Frame<wbr>Prefix</a>
 					</li>
 				</ul>
 			</nav>
