--- a/ref/msal-core/modules/_authority_b2cauthority_.html
+++ b/ref/msal-core/modules/_authority_b2cauthority_.html
@@ -66,6 +66,32 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module"><a href="_authority_b2cauthority_.html#b2ctrustedhostlist" class="tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module">
+					<a name="b2ctrustedhostlist" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> B2CTrusted<wbr>Host<wbr>List</h3>
+					<div class="tsd-signature tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/authority/B2cAuthority.ts#L10">src/authority/B2cAuthority.ts:10</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
@@ -80,6 +106,9 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
+						<a href="_authority_b2cauthority_.html#b2ctrustedhostlist" class="tsd-kind-icon">B2CTrusted<wbr>Host<wbr>List</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
