--- a/ref/msal-core/modules/_error_clientautherror_.html
+++ b/ref/msal-core/modules/_error_clientautherror_.html
@@ -748,7 +748,7 @@
 						<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 							<a name="clientautherrormessage.userloginrequirederror.desc-21" class="tsd-anchor"></a>
 							<h3>desc</h3>
-							<div class="tsd-signature tsd-kind-icon">desc<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;User login is required.&quot;</span></div>
+							<div class="tsd-signature tsd-kind-icon">desc<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;User login is required. For silent calls, request must contain either sid or login_hint&quot;</span></div>
 							<aside class="tsd-sources">
 								<ul>
 									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/error/ClientAuthError.ts#L62">src/error/ClientAuthError.ts:62</a></li>
