--- a/ref/msal-core/modules/_index_.html
+++ b/ref/msal-core/modules/_index_.html
@@ -85,7 +85,12 @@
 								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#loglevel" class="tsd-kind-icon">Log<wbr>Level</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#logger" class="tsd-kind-icon">Logger</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#servererror" class="tsd-kind-icon">Server<wbr>Error</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#serverhashparamkeys" class="tsd-kind-icon">Server<wbr>Hash<wbr>Param<wbr>Keys</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#useragentapplication" class="tsd-kind-icon">User<wbr>Agent<wbr>Application</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#windowutils" class="tsd-kind-icon">Window<wbr>Utils</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#authresponsecallback" class="tsd-kind-icon">auth<wbr>Response<wbr>Callback</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#errorreceivedcallback" class="tsd-kind-icon">error<wbr>Received<wbr>Callback</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-external-module"><a href="_index_.html#tokenreceivedcallback" class="tsd-kind-icon">token<wbr>Received<wbr>Callback</a></li>
 							</ul>
 						</section>
 					</div>
@@ -154,9 +159,34 @@
 					Re-exports <a href="../classes/_error_servererror_.servererror.html">ServerError</a>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="serverhashparamkeys" class="tsd-anchor"></a>
+					<h3>Server<wbr>Hash<wbr>Param<wbr>Keys</h3>
+					Re-exports <a href="../enums/_utils_constants_.serverhashparamkeys.html">ServerHashParamKeys</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
 					<a name="useragentapplication" class="tsd-anchor"></a>
 					<h3>User<wbr>Agent<wbr>Application</h3>
 					Re-exports <a href="../classes/_useragentapplication_.useragentapplication.html">UserAgentApplication</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="windowutils" class="tsd-anchor"></a>
+					<h3>Window<wbr>Utils</h3>
+					Re-exports <a href="../classes/_utils_windowutils_.windowutils.html">WindowUtils</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="authresponsecallback" class="tsd-anchor"></a>
+					<h3>auth<wbr>Response<wbr>Callback</h3>
+					Re-exports <a href="_useragentapplication_.html#authresponsecallback">authResponseCallback</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="errorreceivedcallback" class="tsd-anchor"></a>
+					<h3>error<wbr>Received<wbr>Callback</h3>
+					Re-exports <a href="_useragentapplication_.html#errorreceivedcallback">errorReceivedCallback</a>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-external-module">
+					<a name="tokenreceivedcallback" class="tsd-anchor"></a>
+					<h3>token<wbr>Received<wbr>Callback</h3>
+					Re-exports <a href="_useragentapplication_.html#tokenreceivedcallback">tokenReceivedCallback</a>
 				</section>
 			</section>
 		</div>
@@ -210,7 +240,22 @@
 						<a href="_index_.html#servererror" class="tsd-kind-icon">Server<wbr>Error</a>
 					</li>
 					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#serverhashparamkeys" class="tsd-kind-icon">Server<wbr>Hash<wbr>Param<wbr>Keys</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
 						<a href="_index_.html#useragentapplication" class="tsd-kind-icon">User<wbr>Agent<wbr>Application</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#windowutils" class="tsd-kind-icon">Window<wbr>Utils</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#authresponsecallback" class="tsd-kind-icon">auth<wbr>Response<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#errorreceivedcallback" class="tsd-kind-icon">error<wbr>Received<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-external-module">
+						<a href="_index_.html#tokenreceivedcallback" class="tsd-kind-icon">token<wbr>Received<wbr>Callback</a>
 					</li>
 				</ul>
 			</nav>
