--- a/ref/msal-core/modules/_telemetry_httpevent_.html
+++ b/ref/msal-core/modules/_telemetry_httpevent_.html
@@ -197,6 +197,16 @@
 						</aside>
 					</section>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
+						<a name="event_keys.url" class="tsd-anchor"></a>
+						<h3>URL</h3>
+						<div class="tsd-signature tsd-kind-icon">URL<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;url&quot;)</span></div>
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/HttpEvent.ts#L17">src/telemetry/HttpEvent.ts:17</a></li>
+							</ul>
+						</aside>
+					</section>
+					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
 						<a name="event_keys.user_agent" class="tsd-anchor"></a>
 						<h3>USER_<wbr>AGENT</h3>
 						<div class="tsd-signature tsd-kind-icon">USER_<wbr>AGENT<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = prependEventNamePrefix(&quot;user_agent&quot;)</span></div>
