--- a/ref/msal-core/modules/_utils_constants_.html
+++ b/ref/msal-core/modules/_utils_constants_.html
@@ -94,6 +94,7 @@
 							<h3>Object literals</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-object-literal tsd-parent-kind-external-module"><a href="_utils_constants_.html#aadtrustedhostlist" class="tsd-kind-icon">AADTrusted<wbr>Host<wbr>List</a></li>
+								<li class="tsd-kind-object-literal tsd-parent-kind-external-module"><a href="_utils_constants_.html#frameprefix" class="tsd-kind-icon">Frame<wbr>Prefix</a></li>
 							</ul>
 						</section>
 					</div>
@@ -104,10 +105,10 @@
 				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-parent-kind-external-module">
 					<a name="interactiontype" class="tsd-anchor"></a>
 					<h3>Interaction<wbr>Type</h3>
-					<div class="tsd-signature tsd-kind-icon">Interaction<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"redirectInteraction"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"popupInteraction"</span></div>
+					<div class="tsd-signature tsd-kind-icon">Interaction<wbr>Type<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"redirectInteraction"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"popupInteraction"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"silentInteraction"</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L136">src/utils/Constants.ts:136</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L133">src/utils/Constants.ts:133</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +125,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L154">src/utils/Constants.ts:154</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L159">src/utils/Constants.ts:159</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -145,7 +146,7 @@
 					<div class="tsd-signature tsd-kind-icon">AADTrusted<wbr>Host<wbr>List<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L101">src/utils/Constants.ts:101</a></li>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L103">src/utils/Constants.ts:103</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
@@ -154,7 +155,7 @@
 						<div class="tsd-signature tsd-kind-icon">login.chinacloudapi.cn<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.chinacloudapi.cn&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L103">src/utils/Constants.ts:103</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L105">src/utils/Constants.ts:105</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -164,7 +165,7 @@
 						<div class="tsd-signature tsd-kind-icon">login.cloudgovapi.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.cloudgovapi.us&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L104">src/utils/Constants.ts:104</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L106">src/utils/Constants.ts:106</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -174,7 +175,7 @@
 						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.com<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.com&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L105">src/utils/Constants.ts:105</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L107">src/utils/Constants.ts:107</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -184,7 +185,7 @@
 						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.de<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.de&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L106">src/utils/Constants.ts:106</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L108">src/utils/Constants.ts:108</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -194,7 +195,7 @@
 						<div class="tsd-signature tsd-kind-icon">login.microsoftonline.us<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.microsoftonline.us&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L107">src/utils/Constants.ts:107</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L109">src/utils/Constants.ts:109</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -204,7 +205,42 @@
 						<div class="tsd-signature tsd-kind-icon">login.windows.net<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;login.windows.net&quot;</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L102">src/utils/Constants.ts:102</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L104">src/utils/Constants.ts:104</a></li>
+							</ul>
+						</aside>
+					</section>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-external-module">
+					<a name="frameprefix" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> Frame<wbr>Prefix</h3>
+					<div class="tsd-signature tsd-kind-icon">Frame<wbr>Prefix<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L151">src/utils/Constants.ts:151</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>Frame name prefixes for the hidden iframe created in silent frames</p>
+						</div>
+					</div>
+					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
+						<a name="frameprefix.id_token_frame" class="tsd-anchor"></a>
+						<h3>ID_<wbr>TOKEN_<wbr>FRAME</h3>
+						<div class="tsd-signature tsd-kind-icon">ID_<wbr>TOKEN_<wbr>FRAME<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;msalIdTokenFrame&quot;</span></div>
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L152">src/utils/Constants.ts:152</a></li>
+							</ul>
+						</aside>
+					</section>
+					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal">
+						<a name="frameprefix.token_frame" class="tsd-anchor"></a>
+						<h3>TOKEN_<wbr>FRAME</h3>
+						<div class="tsd-signature tsd-kind-icon">TOKEN_<wbr>FRAME<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;msalRenewFrame&quot;</span></div>
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/utils/Constants.ts#L153">src/utils/Constants.ts:153</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -241,6 +277,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="_utils_constants_.html#aadtrustedhostlist" class="tsd-kind-icon">AADTrusted<wbr>Host<wbr>List</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
+						<a href="_utils_constants_.html#frameprefix" class="tsd-kind-icon">Frame<wbr>Prefix</a>
 					</li>
 				</ul>
 			</nav>
