--- a/ref/msal-core/classes/_authority_authorityfactory_.authorityfactory.html
+++ b/ref/msal-core/classes/_authority_authorityfactory_.authorityfactory.html
@@ -85,6 +85,7 @@
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_authority_authorityfactory_.authorityfactory.html#createinstance" class="tsd-kind-icon">Create<wbr>Instance</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="_authority_authorityfactory_.authorityfactory.html#setknownauthorities" class="tsd-kind-icon">set<wbr>Known<wbr>Authorities</a></li>
 							</ul>
 						</section>
 					</div>
@@ -102,7 +103,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/authority/AuthorityFactory.ts#L36">src/authority/AuthorityFactory.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/authority/AuthorityFactory.ts#L51">src/authority/AuthorityFactory.ts:51</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -121,6 +122,37 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Authority</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
+					<a name="setknownauthorities" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagStatic">Static</span> set<wbr>Known<wbr>Authorities</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
+						<li class="tsd-signature tsd-kind-icon">set<wbr>Known<wbr>Authorities<span class="tsd-signature-symbol">(</span>validateAuthority<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span>, knownAuthorities<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/authority/AuthorityFactory.ts#L20">src/authority/AuthorityFactory.ts:20</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Use when Authority is B2C and validateAuthority is set to True to provide list of allowed domains.</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>validateAuthority: <span class="tsd-signature-type">boolean</span></h5>
+								</li>
+								<li>
+									<h5>knownAuthorities: <span class="tsd-signature-type">Array</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
 				</section>
@@ -146,6 +178,9 @@
 						<ul>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
 								<a href="_authority_authorityfactory_.authorityfactory.html#createinstance" class="tsd-kind-icon">Create<wbr>Instance</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
+								<a href="_authority_authorityfactory_.authorityfactory.html#setknownauthorities" class="tsd-kind-icon">set<wbr>Known<wbr>Authorities</a>
 							</li>
 						</ul>
 					</li>
