--- a/ref/msal-core/enums/_telemetry_apievent_.api_code.html
+++ b/ref/msal-core/enums/_telemetry_apievent_.api_code.html
@@ -81,6 +81,7 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_code.html#acquiretokensilent" class="tsd-kind-icon">Acquire<wbr>Token<wbr>Silent</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_code.html#loginpopup" class="tsd-kind-icon">Login<wbr>Popup</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_code.html#loginredirect" class="tsd-kind-icon">Login<wbr>Redirect</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="_telemetry_apievent_.api_code.html#logout" class="tsd-kind-icon">Logout</a></li>
 							</ul>
 						</section>
 					</div>
@@ -138,6 +139,16 @@
 						</ul>
 					</aside>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="logout" class="tsd-anchor"></a>
+					<h3>Logout</h3>
+					<div class="tsd-signature tsd-kind-icon">Logout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> = 2006</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L23">src/telemetry/ApiEvent.ts:23</a></li>
+						</ul>
+					</aside>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -173,6 +184,9 @@
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="_telemetry_apievent_.api_code.html#loginredirect" class="tsd-kind-icon">Login<wbr>Redirect</a>
 							</li>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
+								<a href="_telemetry_apievent_.api_code.html#logout" class="tsd-kind-icon">Logout</a>
+							</li>
 						</ul>
 					</li>
 				</ul>
@@ -185,6 +199,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="../modules/_telemetry_apievent_.html#event_keys" class="tsd-kind-icon">EVENT_<wbr>KEYS</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_telemetry_apievent_.html#mapeventidentifertocode" class="tsd-kind-icon">map<wbr>Event<wbr>Identifer<wbr>ToCode</a>
 					</li>
 				</ul>
 			</nav>
