--- a/ref/msal-core/modules/_telemetry_apievent_.html
+++ b/ref/msal-core/modules/_telemetry_apievent_.html
@@ -87,6 +87,7 @@
 							<h3>Object literals</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-object-literal tsd-parent-kind-external-module"><a href="_telemetry_apievent_.html#event_keys" class="tsd-kind-icon">EVENT_<wbr>KEYS</a></li>
+								<li class="tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported"><a href="_telemetry_apievent_.html#mapeventidentifertocode" class="tsd-kind-icon">map<wbr>Event<wbr>Identifer<wbr>ToCode</a></li>
 							</ul>
 						</section>
 					</div>
@@ -184,6 +185,31 @@
 						</aside>
 					</section>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="mapeventidentifertocode" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> map<wbr>Event<wbr>Identifer<wbr>ToCode</h3>
+					<div class="tsd-signature tsd-kind-icon">map<wbr>Event<wbr>Identifer<wbr>ToCode<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L35">src/telemetry/ApiEvent.ts:35</a></li>
+						</ul>
+					</aside>
+					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-not-exported">
+						<a name="mapeventidentifertocode.__computed" class="tsd-anchor"></a>
+						<h3>__computed</h3>
+						<div class="tsd-signature tsd-kind-icon">__computed<span class="tsd-signature-symbol">:</span> <a href="../enums/_telemetry_apievent_.api_code.html" class="tsd-signature-type">API_CODE</a><span class="tsd-signature-symbol"> = API_CODE.Logout</span></div>
+						<aside class="tsd-sources">
+							<ul>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L36">src/telemetry/ApiEvent.ts:36</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L37">src/telemetry/ApiEvent.ts:37</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L38">src/telemetry/ApiEvent.ts:38</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L39">src/telemetry/ApiEvent.ts:39</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L40">src/telemetry/ApiEvent.ts:40</a></li>
+								<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-core/src/telemetry/ApiEvent.ts#L41">src/telemetry/ApiEvent.ts:41</a></li>
+							</ul>
+						</aside>
+					</section>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -210,6 +236,9 @@
 					</li>
 					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module">
 						<a href="_telemetry_apievent_.html#event_keys" class="tsd-kind-icon">EVENT_<wbr>KEYS</a>
+					</li>
+					<li class=" tsd-kind-object-literal tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_telemetry_apievent_.html#mapeventidentifertocode" class="tsd-kind-icon">map<wbr>Event<wbr>Identifer<wbr>ToCode</a>
 					</li>
 				</ul>
 			</nav>
